--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI="mongodb://localhost:27017/nToDo.users"
+MONGO_URI="mongodb://localhost:27017/nToDo"
 JWT="gfdkgdadhfls"
 NODE_ENV='development'
